# webcli

./: .gitignore  README.md  SKILL.md  pyproject.toml
browser_cdp/: __init__.py  cdp_cli.py  cdp_proxy.py  check_deps.py  match_site.py  test.py
experience/sites/bilibili.com/action/: popular-list.md
references/: cdp-api.md  experience.md  network-analysis.md
test/: __init__.py  test_cdp_cli.py
webcli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
