[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webcli"
version = "1.0.1"
description = "Chrome DevTools Protocol tools for webcli skill"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jayden", email = "jayden@alibaba-inc.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
cdp-proxy = "browser_cdp.cdp_proxy:main"
webcli = "browser_cdp.cdp_cli:main"
check-deps = "browser_cdp.check_deps:main"
match-site = "browser_cdp.match_site:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["browser_cdp*"]
